[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-ui-env"
version = "0.1.0"
description = "RL-style mobile UI agent environment for Prime Intellect Verifiers"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mobile_ui_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]